--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-boiler-typescript",
+  "name": "least-picked",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
