--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@babel/polyfill": "^7.8.7",
     "@material-ui/core": "^4.9.5",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "cross-env": "^7.0.2",
     "moment": "^2.24.0",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "typescript": "^3.8.3",
