--- a/server/build.gradle
+++ b/server/build.gradle
@@ -16,8 +16,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.3.0.RELEASE'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.2.5.RELEASE'
 
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	runtime("com.h2database:h2:1.3.176")
 
