--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   datasource:
     driverClassName: org.h2.Driver
     initialization-mode: always
-    password: ''
     url: jdbc:h2:mem:testdb
     username: sa
+    password: ""
   h2:
     console:
       enabled: true
@@ -16,7 +16,7 @@ spring:
     hibernate:
       ddl-auto: none
 
-#https://developers.facebook.com/apps/ for facebook
+  #https://developers.facebook.com/apps/ for facebook
   security:
     oauth2:
       client:
