--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+server/src/main/resources/static/
 
 ### STS ###
 .apt_generated
