--- a/server/build.gradle
+++ b/server/build.gradle
@@ -19,10 +19,12 @@ dependencies {
 	implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.3.0.RELEASE'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.2.5.RELEASE'
 
+	implementation group: 'commons-dbcp', name: 'commons-dbcp', version: '1.2.2'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+	implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.1.7.RELEASE'
+
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
-	runtime("com.h2database:h2:1.3.176")
-
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
