--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -2,22 +2,15 @@ spring:
   output:
     ansi:
       enabled: ALWAYS
-  datasource:
-    driverClassName: org.h2.Driver
-    initialization-mode: always
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password: ""
-  h2:
-    console:
-      enabled: true
-      path: /h2
-      settings:
-        web-allow-others: true
   jpa:
-    generate-ddl: false
-    hibernate:
-      ddl-auto: none
+    properties:
+      hibernate:
+        default_schema: heroku_c250dadf7effe4c
+
+  datasource:
+    url: jdbc:mysql://us-cdbr-iron-east-01.cleardb.net/heroku_c250dadf7effe4c
+    username: b1db4aa9b13e19
+    password: b0c90b8a
 
   #https://developers.facebook.com/apps/ for facebook
   security:
