--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
               - email
 
 game-settings:
-  activeSeasonInt: 1
+  activeSeasonInt: 1 # replace with logic that would derive from dates
   seasons:
     1:
       startDate: "01/01/2020"
